--- a/src/main/resources/assets/miku/lang/en_us.lang
+++ b/src/main/resources/assets/miku/lang/en_us.lang
@@ -51,6 +51,7 @@ tile.miku_dirt.name=Miku Dirt
 tile.miku_grass.name=Miku Grass
 tile.miku_stone.name=Miku Stone
 tile.miku_generator.name=Miku Generator
+tile.miku_power_station.name=Miku Power Station
 
 #advancement
 advancement.root=Miku
