--- a/src/main/resources/assets/miku/lang/en_us.lang
+++ b/src/main/resources/assets/miku/lang/en_us.lang
@@ -53,6 +53,7 @@ tile.miku_stone.name=Miku Stone
 tile.miku_generator.name=Miku Generator
 tile.miku_power_station.name=Miku Power Station
 tile.miku_furnace.name=Miku Furnace
+tile.MikuEU.name=Miku Power to EU Converter
 
 #advancement
 advancement.root=Miku
